# asrs_reports_cls

./: .dockerignore  .flake8  .gitignore  .terraform.lock.hcl  Dockerfile  Dockerfile.asrs.cpu  Dockerfile.base  Dockerfile.feat_eng  Dockerfile.test  README.md  gcp_infra.tf  pyproject.toml  variables.tf
.cloudbuild/: build_image.yaml
.github/workflows/: build_base_image.yaml  build_push_images.yaml  build_push_images_on_call.yaml  disk_cleanup_on_call.yaml  dockerfiles_ci.yaml  etl.yaml  feature_engineering.yaml  setup_environment_on_call.yaml  train.yaml
conf/: parameters.yaml
conf/base/: core.yaml  etl.yaml  feature_engineering.yaml  train.yaml
src/: __init__.py
src/etl/: __init__.py  components.py  pipeline.py  transformations.py  validate_features.py
src/feature_engineering/: __init__.py  components.py  nodes.py  pipeline.py
src/train/: __init__.py  components.py  models.py  pipeline.py
src/utilitis/: __init__.py  core.py  gcpstorage.py  platforms.py
test/: test_etl_components.py
