[tool.poetry]
name = "clsreport"
version = "0.1.0"
description = ""
authors = ["CedrickArmel <35418979+CedrickArmel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pip = "^24.0"
install = "^1.3.5"
hsfs = {version = ">=3.4,<4.0", extras = ["hive"]}
kfp = ">=2.0,<3.0"
python-dotenv = "^1.0.1"
hopsworks = "^3.4.4"
google-cloud-pipeline-components = "^2.13.1"
hydra-core = "^1.3.2"
gcsfs = "^2024.3.1"
wonderwords = "^2.2.0"
google-cloud-aiplatform = "^1.48.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
isort = "^5.13.2"
pylint = "^3.1.0"
docker = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
